# src/main/java/com/starteo/demo/endpoint/rest/mapper/FundMapper.java
@@ -2,7 +2,7 @@ package com.starteo.demo.endpoint.rest.mapper;
 
 import com.starteo.demo.endpoint.rest.model.Fund;
 import com.starteo.demo.endpoint.rest.model.Idea;
-import com.starteo.demo.endpoint.rest.model.UserInfo;
+import com.starteo.demo.endpoint.rest.model.User;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -10,18 +10,14 @@ import org.springframework.stereotype.Component;
 @AllArgsConstructor
 public class FundMapper {
   private IdeaMapper ideaMapper;
+  private UserMapper userMapper;
 
   public Fund toRest(com.starteo.demo.repository.model.Fund domain) {
-    UserInfo userInfo = UserInfo.builder()
-        .email(domain.getUser().getEmail())
-        .firstname(domain.getUser().getFirstname())
-        .lastname(domain.getUser().getLastname())
-        .id(domain.getUser().getId())
-        .build();
+    User user = userMapper.toDto(domain.getUser());
     Idea idea = ideaMapper.toRest(domain.getIdea());
     return Fund.builder()
         .id(domain.getId())
-        .user(userInfo)
+        .user(user)
         .value(domain.getValue())
         .idea(idea)
         .build();
