# src/main/java/com/starteo/demo/repository/model/enums/Role.java
@@ -1,0 +1,6 @@
+package com.starteo.demo.repository.model.enums;
+
+public enum Role {
+  ADMIN,
+  USER
+}
